Tangent normal map in Obect texture coordinates do not works when object do not has any UV Map #41174

Closed
opened 2014-07-25 10:43:12 +02:00 by lopata · 8 comments

Win 7 x 64

blender-2.71-2e43617-win64.zip

tangent_normal_map_bug.zip

1.jpg

2.jpg

Win 7 x 64 blender-2.71-2e43617-win64.zip [tangent_normal_map_bug.zip](https://archive.blender.org/developer/F99485/tangent_normal_map_bug.zip) ![1.jpg](https://archive.blender.org/developer/F99486/1.jpg) ![2.jpg](https://archive.blender.org/developer/F99488/2.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @lopataasdf

Added subscriber: @lopataasdf

Added subscriber: @mont29

Added subscriber: @mont29
Dalai Felinto was assigned by Bastien Montagne 2014-07-25 13:06:59 +02:00

Confirmed indeed.

Confirmed indeed.
Dalai Felinto removed their assignment 2014-07-25 20:11:53 +02:00
Sergey Sharybin self-assigned this 2014-07-28 14:03:11 +02:00

The thing is: tangent space is a property of UV map, this is needed for derivatives calculations. BI has a fallback to use sphere projection when there's no UV map, this is gonna to be supported in Cycles real soon.

The thing is: tangent space is a property of UV map, this is needed for derivatives calculations. BI has a fallback to use sphere projection when there's no UV map, this is gonna to be supported in Cycles real soon.

This issue was referenced by 946f291c46

This issue was referenced by 946f291c46b5f7f481b42de1ecf1186608809fd8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 946f291c46.

Closed by commit 946f291c46.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41174
No description provided.